--- a/openff_sphinx_theme/openff_sphinx_theme/repo.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/repo.html
@@ -1,4 +1,4 @@
-<a href="{{ theme_repo_url }}" class="navbar-item is-family-monospace is-hidden-desktop-only">
+<a href="{{ theme_repo_url }}" class="is-family-monospace">
   {% if theme_repo_type %}
   <span class="icon-text">
     <span class="icon">
