--- a/openff_sphinx_theme/openff_sphinx_theme/globaltoc.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/globaltoc.html
@@ -1,5 +1,5 @@
 {% set toctree = toctree(maxdepth=theme_globaltoc_depth|toint, collapse=theme_globaltoc_collapse|tobool, includehidden=theme_globaltoc_includehidden|tobool) %}
-{% if toctree and sidebars and 'globaltoc.html' in sidebars %}
+{% if toctree and (sidebars is not defined or 'globaltoc.html' in sidebars) %}
 <nav class="menu ff-globaltoc">
   {% set toctree_nodes = derender_toc(toctree, False) %}
   {%- for item in toctree_nodes %}
