--- a/openff_sphinx_theme/openff_sphinx_theme/layout.html
+++ b/openff_sphinx_theme/openff_sphinx_theme/layout.html
@@ -51,7 +51,7 @@
 
 {%- block content %}
   {% set nav_bar_tabs = parents or theme_master_doc or theme_nav_links %}
-  <main class="section">
+  <main class="mb-6">
       <div class="columns">
         <input type="checkbox" id="drawer-toggle" class="is-hidden">
         <label for="drawer-toggle" role="button" class="navbar-burger burger is-light">
