--- a/sphinx_material/sphinx_material/google_analytics.html
+++ b/sphinx_material/sphinx_material/google_analytics.html
@@ -1,11 +1,14 @@
 {%- if theme_google_analytics_account %}
-  <script>
-      window.ga = window.ga || function () {
-          (ga.q = ga.q || []).push(arguments)
-      };
-      ga.l = +new Date;
-      ga('create', '{{ theme_google_analytics_account }}', 'auto');
-      ga('send', 'pageview');
-  </script>
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ theme_google_analytics_account }}"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', '{{ theme_google_analytics_account }}');
+</script>
 {%- endif %}
