--- a/devel/_modules/numpy/polynomial/polynomial.html
+++ b/devel/_modules/numpy/polynomial/polynomial.html
@@ -55,6 +55,7 @@
   <link href="../../../_static/pygments.css" rel="stylesheet" type="text/css"/>
   <link href="../../../_static/material.css" rel="stylesheet" type="text/css"/>
   <link href="../../../_static/copybutton.css" rel="stylesheet" type="text/css"/>
+  <link href="../../../_static/css/rtd_sphinx_search.min.css" rel="stylesheet" type="text/css"/>
   <script data-url_root="../../../" id="documentation_options" src="../../../_static/documentation_options.js">
   </script>
   <script src="../../../_static/jquery.js">
@@ -66,6 +67,8 @@
   <script src="../../../_static/clipboard.min.js">
   </script>
   <script src="../../../_static/copybutton.js">
+  </script>
+  <script src="../../../_static/js/rtd_sphinx_search.min.js">
   </script>
   <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js">
   </script>
@@ -121,7 +124,7 @@
        <label class="md-search__overlay" for="__search">
        </label>
        <div class="md-search__inner" role="search">
-        <form action="../../../search.html" class="md-search__form" method="GET" name="search">
+        <form action="../../../search.html" class="md-search__form" method="get" name="search">
          <input autocapitalize="off" autocomplete="off" class="md-search__input" data-md-component="query" data-md-state="active" name="q" placeholder="Search" spellcheck="false" type="text"/>
          <label class="md-icon md-search__icon" for="__search">
          </label>
