Github Actions docs build after commit f94eccf1

--- a/devel/customization.html
+++ b/devel/customization.html
@@ -977,6 +977,31 @@ table has no class attribute. Custom table classes need to provide the full styl
            ¶
           </a>
          </h2>
+         <div class="admonition note">
+          <p class="admonition-title">
+           Note
+          </p>
+          <p>
+           You must
+           <em>
+            explicitly
+           </em>
+           include
+           <code class="docutils literal notranslate">
+            <span class="pre">
+             globaltoc.html
+            </span>
+           </code>
+           in
+           <code class="docutils literal notranslate">
+            <span class="pre">
+             html_sidebars
+            </span>
+           </code>
+           if you want
+the toc to show up.
+          </p>
+         </div>
          <p>
           You must set
           <code class="docutils literal notranslate">
