--- a/sphinx_material/sphinx_material/header.html
+++ b/sphinx_material/sphinx_material/header.html
@@ -6,6 +6,9 @@
            class="md-header-nav__button md-logo">
           {% if theme_logo_icon|e %}
             <i class="md-icon">{{ theme_logo_icon }}</i>
+          {% elif logo_url %}
+              <img src="{{ logo_url }}" height="26"
+                   alt="{{ shorttitle|striptags|e }} logo">
           {% elif logo %}
               <img src="{{ pathto('_static/' ~ logo, 1) }}" height="26"
                    alt="{{ shorttitle|striptags|e }} logo">
